--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		let mini = 0;	
 		let chg = 0;
 		
-		 let speed = 100;
+		 let speed = 300;
 		function incret() {maxi++;document.getElementById('max').innerHTML = max.value=maxi;}
 		function dcret() {maxi--;document.getElementById('max').innerHTML = max.value=maxi;}
 		if(maxi > 8){speed = 20;}
@@ -51,7 +51,7 @@ const images2 = ['Dgrad1.png','Dgrad1.png','Dgrad2.png','Dgrad3.png','Dgrad4.png
 var myarr = [images1, images2];
 let ran = 0;
 setInterval(
-function(){if(maxi < 0){chg = 1;clearInterval();speed = 300;}if(maxi > 4){chg = 0;speed = 60;}if(ran > myarr[chg].length-1){ran = 0;} image.src = myarr[chg][ran];ran++;},speed);
+function(){if(maxi < 0){chg = 1;clearInterval();speed = 300;}if(maxi > 4){chg = 0;clearInterval();speed = 100;}if(ran > myarr[chg].length-1){ran = 0;} image.src = myarr[chg][ran];ran++;},speed);
             </script>
             
 
